# abs_blockchain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
@docs/: method_reference_llm.md
examples/: 01_basic_notarization.py  02_nft_minting.py  03_complete_workflow.py  README.md  setup_01_deploy_contracts.py  setup_02_authorize_server.py  setup_03_create_user_wallets.py  setup_03_revoke_keys.py  setup_04_revoke_keys.py
src/abs_blockchain/: __init__.py  client.py  config.py  contract_manager.py  models.py
tests/: test_client.py  test_contract_manager.py
