[project]
name = "abs-blockchain"
version = "0.1.0"
description = "Mock blockchain integration for abs_notary - gasless notarization service"
authors = [
    {name = "ingmarAvocado"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.14.0,<8.0.0; python_version<'4'",
    "pydantic>=2.12.4,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

